k8s-app/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-app
  template:
    metadata:
      labels:
        app: k8s-app
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
      - name: k8s-app
        image: 580034872400.dkr.ecr.us-east-1.amazonaws.com/devsecops-k8s-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
