k8s-app/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-k8s-service
spec:
  selector:
    app: devsecops-k8s-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
