k8s-app/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsecops-k8s-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:580034872400:certificate/61fde20d-2aae-46c3-9eeb-bbf0c90dde89
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {"Type":"redirect","RedirectConfig":{"Protocol":"HTTPS","Port":"443","StatusCode":"HTTP_301"}}
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - k8s.securingthecloud.org
    secretName: tls-secret
  rules:
  - host: k8s.securingthecloud.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devsecops-k8s-service
            port:
              number: 80
